--- a/project.css
+++ b/project.css
@@ -2,7 +2,66 @@
     margin:0;
     padding:0;
 }
+#heading{
+    width: 100%;
+     background-color: rgb(0, 217, 255);
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 40px;
+    padding: 15px 80px;
+}
+.logo{
+    font-size: 30px;
+    font-weight: bolder;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: black;
+}
+.logo span{
+    font-size: 25px;
+    font-weight: bolder;
+    color: black;
+}
+.search{
+    background-color: white;
+    padding: 5px 5px 4px 8px;
+    display: flex;
+}
 
+
+.inputfiled {
+    width: 385px;
+        outline: none;
+    border: none;
+    text-align: center;
+    border-radius: 20px;
+    font-size: 17px;
+    text-transform: capitalize;
+}
+.navbar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.navbar ul {
+text-transform: none;
+}
+.navbar ul a li {
+display: inline;
+    list-style: none;
+    color: black;
+    margin: 20px;
+    font-size: 20px;
+}
+
+
+.navbar .btn{
+    background-color: white;
+    padding: 8px;
+    color: black;
+}
 #dr{
     padding:0;
     margin:0;
@@ -15,6 +74,7 @@
     border-radius: 10px;
     position:relative;
     background-color:darkgrey;
+    letter-spacing: 1px;
   
 }
 
@@ -37,6 +97,7 @@
     border-radius: 10px;
     position:relative; 
     margin-left: 5%;
+    letter-spacing: 1px;
     
     
 }
@@ -47,6 +108,7 @@
     border-radius: 10px;
     position:relative; 
     margin-left: 5%;
+    letter-spacing: 1px;
 
 
 }
@@ -57,6 +119,7 @@
     border-radius: 10px;
     position:relative; 
     margin-left: 5%;
+    letter-spacing: 1px;
 
 }
 
@@ -72,63 +135,7 @@
 #container{
     display: flex;
 }
-a{
-    color: black;
-}
-#navbar{
-  
-    height:60px;
-    background-color:deepskyblue;
-    position:relative;
-    justify-content: space-evenly;
-    
-}
-#place{
-    height: 20px;
-    width: 25%;
-    margin-left: 0%;
-    margin-right: 120px;
-}
-#placeholder{
-    height:20px;
-    width: 5%;
-    align-items: center;
-}
-#bold{
-   font-size: 40px;
-  margin-left: 0px;
-    margin-right:50px;
-}
-#home{
-    margin-right: 80px;
 
-    
-}
-#service{
-    margin-right: 80px;
-   
-}
-#about{
-    margin-right:80px;
-}
-    
-#Register{
-    margin-right:80px;
-    font-size: 15;
-    
-}
-#Login{
-    margin-right:80px;
-    
-    
-}
-div{
-    place-items: center;
-
-}
-a{
-    font-size:larger;
-}
 h2{
     padding-left: 1%;
 }
@@ -142,7 +149,76 @@ p{
     margin-left:1%;
 
 }
-#footer{
+.container{
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    padding: 40px;
+}
+.container h3{
+    text-align: center;
+    font-size: 25px;
+    font-weight: bolder;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.container p{
+padding: 20px 0px ;
+    text-align: center;
+    font-size: 16px;
+   color: black;
+   letter-spacing: 3px;
+
+}
+
+.btn1{
+    display: flex;
+    gap: 20px;
+    margin-top: 30px;
+}
+
+.btn1 li  {
+    list-style: none;
+    color: black;
+}
+.btn1 a{
+    text-decoration: none;
+}
+.showing-btn{
+    border: 1px solid gray;
+    border-radius: 20px;
+    padding: 10px 20px;
+
+    background-color: white;
+}
+.showing-btn:hover{
+    background-color: royalblue;
+    border: 1px solid rgb(255, 255, 255);
+
+}
+.btn1 li:hover{
+    color: white;
+}
+.search1{
+    background-color: white;
+    padding: 8px 5px 4px 8px;
+    display: flex;
+    border: 1px solid gray;
+    border-radius: 20px;
+    display: inline;
+}
+
+
+.inputfiled1 {
+ margin: 35px 0px;
+    width: 385px;
+        outline: none;
+    border: none;
+    text-align: start;
+    border-radius: 20px;
+    font-size: 17px;
+    text-transform: capitalize;
+   
+}#footer{
     background-color: deepskyblue;
     display: flex;
     flex-wrap: wrap;
@@ -303,6 +379,6 @@ p{
     }
     
     .social-icons li a img {
-        width: 40px; /* Adjust size of social media icons */
+        width: 70px; /* Adjust size of social media icons */
         height: 40px; /* Adjust size of social media icons */
     }
