--- a/project.css
+++ b/project.css
@@ -1,244 +1,230 @@
 *{
-    margin:0;
-    padding:0;
-}
-#heading{
-    width: 100%;
-     background-color: rgb(0, 217, 255);
-    color: black;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 40px;
-    padding: 15px 80px;
-}
-.logo{
-    font-size: 30px;
-    font-weight: bolder;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: black;
-}
-.logo span{
-    font-size: 25px;
-    font-weight: bolder;
-    color: black;
-}
-.search{
-    background-color: white;
-    padding: 5px 5px 4px 8px;
-    display: flex;
-}
-
-
-.inputfiled {
-    width: 385px;
-        outline: none;
-    border: none;
-    text-align: center;
-    border-radius: 20px;
-    font-size: 17px;
-    text-transform: capitalize;
-}
-.navbar{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin: 0px;
+    padding:0px;
+    box-sizing:border-box;
 
 }
-.navbar ul {
-text-transform: none;
-}
-.navbar ul a li {
-display: inline;
-    list-style: none;
-    color: black;
-    margin: 20px;
-    font-size: 20px;
-}
-
-
-.navbar .btn{
-    background-color: white;
-    padding: 8px;
-    color: black;
-}
-#dr{
-    padding:0;
-    margin:0;
-    background-color: antiquewhite;
-}
-#dr{
-    height: 200px;
-    width: 200px;
-    background-color: darkgrey;
-    border-radius: 10px;
-    position:relative;
-    background-color:darkgrey;
-    letter-spacing: 1px;
+nav{
+    width:100%;
+    height: 75px;
+    line-height: 75px;
+    padding:0px 100px;
   
+    background-color: rgb(38,124,124);
 }
-
-#image{
-    height: 40px;
-    width: 40px;
-    position: relative;
-    left: 40%;
-    top:10%;
-    bottom: 5%;
+nav .logo p{
+    font-size: 30px;
+    font-weight: bold;
+    float: left;
+    color:white;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    cursor: pointer;
 }
-#text{
-    text-align: center;
-    padding-top: 15%;
+nav ul{
+    float: right;
 }
-#dr2{
-    height: 200px;
-    width: 200px;
-    background-color:darkgrey;
-    border-radius: 10px;
-    position:relative; 
-    margin-left: 5%;
-    letter-spacing: 1px;
-    
-    
+ul li{
+    display: inline-block;
+     list-style:none;
 }
-#dr3{
-    height: 200px;
-    width: 200px;
-    background-color: darkgrey;
-    border-radius: 10px;
-    position:relative; 
-    margin-left: 5%;
-    letter-spacing: 1px;
-
-
-}
-#dr4{
-    height: 200px;
-    width: 200px;
-    background-color: darkgrey;
-    border-radius: 10px;
-    position:relative; 
-    margin-left: 5%;
-    letter-spacing: 1px;
-
-}
-
-#images{
-    height: 40px;
-    width: 50px;
-    position: relative;
-    left: 40%;
-    top:10%;
-    bottom: 5%;
-
-}
-#container{
-    display: flex;
-}
-
-h2{
-    padding-left: 1%;
-}
-p{
-    padding-left: 1%;
-}
-#container{
-    padding-left: 1%;
-}
-#button{
-    margin-left:1%;
-
-}
-.container{
-    background-color: rgb(255, 255, 255);
-    width: 100%;
-    padding: 40px;
-}
-.container h3{
-    text-align: center;
-    font-size: 25px;
-    font-weight: bolder;
-    font-family: 'Times New Roman', Times, serif;
-}
-
-.container p{
-padding: 20px 0px ;
-    text-align: center;
-    font-size: 16px;
-   color: black;
-   letter-spacing: 3px;
-
-}
-
-.btn1{
-    display: flex;
-    gap: 20px;
-    margin-top: 30px;
-}
-
-.btn1 li  {
-    list-style: none;
-    color: black;
-}
-.btn1 a{
+nav li a{
+    font-size: 18px;
+    text-transform: uppercase;
+    padding: 0px  30px;
+    color:white;
     text-decoration: none;
 }
-.showing-btn{
-    border: 1px solid gray;
-    border-radius: 20px;
-    padding: 10px 20px;
-
-    background-color: white;
-}
-.showing-btn:hover{
-    background-color: royalblue;
-    border: 1px solid rgb(255, 255, 255);
+nav li a:hover{
+    color:black;
+    transition: all o.4s ease 0s;
 
 }
-.btn1 li:hover{
-    color: white;
-}
-.search1{
-    background-color: white;
-    padding: 8px 5px 4px 8px;
-    display: flex;
-    border: 1px solid gray;
-    border-radius: 20px;
-    display: inline;
-}
-
-
-.inputfiled1 {
- margin: 35px 0px;
-    width: 385px;
-        outline: none;
-    border: none;
-    text-align: start;
-    border-radius: 20px;
-    font-size: 17px;
-    text-transform: capitalize;
+button {
+    border:none;
+    background-color: beige;
+    padding: 10px 30px;
+    border-radius: 30px;
    
-}#footer{
-    background-color: deepskyblue;
+    font-weight: bold;
+    font-size: 15px;
+    transition: .4s;
+
+    margin-left: 20px;
+
+}
+button:hover{
+   transform: scale(1.3);
+   cursor: pointer;
+
+}
+button a{
+    text-decoration: none;
+    color: black;
+}
+
+  .caption {
+    position: absolute;
+    top: 50px;
+    left: 250px;
+    color: rgba(0, 0, 0, 0.87);
+    display: inline-block;
+    width: 840px;
+    height: 64px;
+    font-size: 55px;
+  }
+  .servicesection {
+    text-decoration: none;
+    position: absolute;
+    top: 653.3px;
+    left: 0.1px;
+    width: 1234px;
+    height: 587px;
+    text-align: center;
+    font-size: var(--font-size-xs);
+    color: var(--color-darkslategray);
+  }
+  .bannersectionbg {
+    position: absolute;
+    top: 2px;
+    left: 0;
+    background-color: rgba(27, 131, 255, 0.1);
+    width: 1234px;
+    height: 551px;
+  }
+  .image-icon,
+  .imagebackground {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 553px;
+  }
+  .imagebackground {
+    background-color: var(--color-gainsboro);
+    width: 471px;
+  }
+  .image-icon {
+    width: 700px;
+    object-fit: cover;
+  }
+  .bannertextbackground,
+  .imagebackground-parent {
+    position: absolute;
+    top: 0;
+    left: 765px;
+    width: 471px;
+    height: 553px;
+  }
+  .bannertextbackground {
+    left: 0;
+    background-color: var(--color-aliceblue);
+    width: 761px;
+  }
+  .searchbuttonarea-child {
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 100px;
+    background-color: #ff984e;
+    width: 137px;
+    height: 46px;
+  }
+  .find-doctors {
+    position: absolute;
+    top: 12px;
+    left: 7.26px;
+    font-size: var(--font-size-2xs);
+    letter-spacing: 0.02em;
+    font-family: var(--font-roboto);
+    color: var(--color-gray-100);
+    text-align: left;
+    display: inline-block;
+    width: 97.86px;
+    height: 24px;
+  }
+  .vector-icon {
+    position: absolute;
+    height: 51.61%;
+    width: 12.03%;
+    top: 19.57%;
+    right: 8.41%;
+    bottom: 28.83%;
+    left: 79.56%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+  }
+  .catogeriesarea,
+  .locationarea,
+  .searchbuttonarea {
+    border: 0;
+    background-color: transparent;
+    position: absolute;
+    top: 383px;
+    height: 46px;
+  }
+  .searchbuttonarea {
+    cursor: pointer;
+    padding: 0;
+    left: 429px;
+    width: 137px;
+  }
+  .catogeriesarea,
+  .locationarea {
+    font-family: var(--font-roboto);
+    font-size: var(--font-size-2xs);
+    left: 212px;
+    width: 165px;
+  }
+  .catogeriesarea {
+    left: 0;
+    width: 204px;
+  }
+  .smalltextarea {
+    position: absolute;
+    top: 219px;
+    left: 0;
+    letter-spacing: 0.02em;
+    display: inline-block;
+    width: 603px;
+    height: 69px;
+  }
+  .captionarea {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 50px;
+    line-height: 60px;
+    color: #010000;
     display: flex;
-    flex-wrap: wrap;
-    margin: auto;
-   
-}
-#footer-col h4{
-    position: relative;
-    margin-bottom: 30px;
-    font-weight: 400;
-    font-size: 22px;
-}
-#footer-col{
-    width: 25%;
-}
-.main-card{
-    display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    width: 655px;
+    mix-blend-mode: normal;
+  }
+  .bannersection,
+  .searchbuttonarea-parent {
+    position: absolute;
+    top: 53px;
+    left: 65px;
+    width: 655px;
+    height: 429px;
+  }
+  .bannersection {
+    top: 100.3px;
+    left: 0.1px;
+    width: 1236px;
+    height: 553px;
+    font-size: 14px;
+    color: #828177;
+  }
+  .main-card{
+    display:flex;
+    flex-wrap:wrap;
     padding: 1%;
     gap: 50px;
+}
+.main-card{
+padding-left: 40px;
 }
 .card{
     max-width: 240px;
@@ -267,118 +253,87 @@ padding: 20px 0px ;
     margin-bottom: 6px;
     color: gray;
 }
-.checked {
-    margin-top: 5px;
-    margin-bottom: 10px;
-    color: orange;
-  }
-  #para p{
-    padding: 20px 0px ;
-        text-align: center;
-        font-size: 30px;
-       color:black;
-       letter-spacing: 3px;
-    
-    }
-    .main-footer{
-        background-color:rgb(0, 217, 255);
-        max-width: 100%;
-        padding: 20px 50px;
-      }
-      .footer{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0px 80px;
-      }
-      .footer h3{
-        font-size: 30px;
-        color: rgb(255, 255, 255);
-        font-weight: bolder;
-        font-family: 'Times New Roman', Times, serif;
-    
-      }
-      .footer h3 span{
-        font-size: 25px ;
-        color: rgb(255, 255, 255);
-        font-weight: bolder;
-      }
-    
-      .search3{
-        display: flex;
-    background-color: white;
-    
-      }
-      .search3 #footer-input{
-        width: 100%;
-        padding: 10px 10px;
-        color: gary;
-        outline: none;
-        border: none;
-      }
-      .search3 #button{
-        color: 
-        white;
-        background-color: black;
-        outline: none;
-        border: none;
-        padding: 0px 14px;
-        font-size: 18px;
-        font-weight: bold;
-      }
-    
-      .text-container {
-        display: flex;
-        justify-content: space-around;
-        padding: 20px;
-    }
-    
-    .text1 {
-        flex: 1;
-        padding: 0 10px;
-    }
-    
-    
-    
-    .text-container {
-        display: flex;
-        justify-content: space-around;
-        padding: 40px 60px 40px 80px;
-    }
-    
-    .text1 {
-        padding: 10px 10px;
-    }
-    
-    .text1 h3 {
-        margin-bottom: 10px; /* Adding space below the heading */
-        color: #ffffff; /* Color for heading */
-    }
-    
-    .text1 li {
-        list-style: none;
-        margin-bottom: 13px;
-        color: white;
-    }
-    .social-media {
-        text-align: center;
-        margin-top: 10px;
-    }
-    .social-media h3{
-        color: white;
-    }
-    
-    .social-icons {
-        list-style-type: none;
-        padding: 10px;
-    }
-    
-    .social-icons li {
-        display: inline-block;
-        margin: 0 10px;
-    }
-    
-    .social-icons li a img {
-        width: 70px; /* Adjust size of social media icons */
-        height: 40px; /* Adjust size of social media icons */
-    }
+.container{
+	max-width: 1170px;
+	margin:auto;
+}
+.row{
+	display: flex;
+	flex-wrap: wrap;
+}
+ul{
+	list-style: none;
+}
+.footer{
+  background-color: rgb(38,124,124);
+    padding: 70px 0; 
+	margin-top: 90%;
+}
+.footer-col{
+   width: 25%;
+   padding: 0 15px;
+}
+.footer-col h4{
+	font-size: 18px;
+	color: #ffffff;
+	text-transform: capitalize;
+	margin-bottom: 35px;
+	font-weight: 500;
+	position: relative;
+}
+.footer-col h4::before{
+	content: '';
+	position: absolute;
+	left:0;
+	bottom: -10px;
+	background-color: #e91e63;
+	height: 2px;
+	box-sizing: border-box;
+	width: 50px;
+}
+.footer-col ul li:not(:last-child){
+	margin-bottom: 10px;
+}
+.footer-col ul li a{
+	font-size: 16px;
+	text-transform: capitalize;
+	color: #ffffff;
+	text-decoration: none;
+	font-weight: 300;
+	color:white;
+	display: block;
+	transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+	color: #ffffff;
+	padding-left: 8px;
+}
+.footer-col .social-links a{
+	display: inline-block;
+	height: 40px;
+	width: 40px;
+	
+	margin:0 10px 10px 0;
+	text-align: center;
+	line-height: 40px;
+	border-radius: 50%;
+	color: #ffffff;
+	transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover{
+	color: #24262b;
+	background-color: #ffffff;
+}
+
+/*responsive*/
+@media(max-width: 767px){
+  .footer-col{
+    width: 50%;
+    margin-bottom: 30px;
+}
+}
+@media(max-width: 574px){
+  .footer-col{
+    width: 100%;
+}
+}
